test: remplacement des `Arrays.asList` par `List.of` dans les tests + refactoring des tests pour améliorer la lisibilité et réduire la duplication
- Utilisation de `List.of` pour un code plus concis.
- Simplification des assertions et des tests répétitifs.
- Refactorisation des méthodes de nettoyage temporaire avec `cleanupTempDir`.
- Réduction des mocks inutiles dans plusieurs classes de tests.